# django-rest

./: README.md  db.sqlite3  pyproject.toml
cursos/: models.py
cursos/migrations/: 0002_alter_avaliacao_options_alter_curso_options_and_more.py
