[tool.poetry]
name = "escola"
version = "0.1.0"
description = ""
authors = ["guilherme <vinespedro55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
sqlparse = "^0.4.4"
django-filter = "^23.5"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
